--- a/backend/Saboreie/receitas/templates/receitas/feed.html
+++ b/backend/Saboreie/receitas/templates/receitas/feed.html
@@ -46,6 +46,7 @@
                 {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'listar_receitas' %}">Minhas Receitas</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'criar_receita' %}">Criar Receita</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'gerador_receitas_ai' %}">Gerador IA</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'feed_seguidos' %}">Feed dos Seguidos</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'listar_usuarios' %}">Descobrir Usuários</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
